--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -1,3 +1,61 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+*{
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+  text-decoration: none;
+}
+
+
+
+
+@layer utilities{
+  .container{
+    @apply max-w-full h-screen flex justify-center items-center bg-black bg-opacity-20
+  }
+
+
+  .wrapper{
+    @apply w-[700px] max-w-[800px] px-[15px] py-[20px] bg-rose-400 rounded-lg
+  }
+
+
+  .header{
+    @apply w-full flex justify-between border-b-2 pb-[10px] border-black
+  }
+
+  .title{
+    @apply capitalize
+  }
+
+
+  .body{
+    @apply w-full flex h-[300px] bg-lime-300 mt-[10px]
+  }
+
+  .box{
+    @apply bg-slate-500 w-[300px] border-e pl-[10px]
+  }
+
+  .btn_add{
+    @apply border-black border-solid border px-[10px] mt-[10px] cursor-pointer
+  }
+
+  .list{
+    @apply w-full flex flex-col gap-[10px] items-start mt-[20px]
+  }
+
+  .list-item{
+    @apply bg-blue-500 px-[10px] rounded-md capitalize
+  }
+}
+
+
+
+@layer components{
+
+}
