--- a/assets/styel.css
+++ b/assets/styel.css
@@ -568,8 +568,76 @@ video {
   }
 }
 
-.list-item {
-  display: list-item;
+.modal_cont {
+  display: none;
+  height: 100vh;
+  max-width: 100%;
+  align-items: center;
+  justify-content: center;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+  --tw-bg-opacity: 0.5;
+}
+
+.modal {
+  height: auto;
+  width: 470px;
+  border-radius: 0.5rem;
+  --tw-bg-opacity: 1;
+  background-color: rgb(71 85 105 / var(--tw-bg-opacity));
+  padding-left: 15px;
+  padding-right: 15px;
+  padding-top: 15px;
+  padding-bottom: 15px;
+}
+
+.modal_header {
+  margin-bottom: 17px;
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+}
+
+.modal_title {
+  font-size: 17px;
+  text-transform: capitalize;
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.fa-xmark {
+  cursor: pointer;
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.modal_body {
+  display: flex;
+  width: 100%;
+  align-items: center;
+  gap: 10px;
+}
+
+input {
+  width: 100%;
+  border-radius: 0.375rem;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-top: 4px;
+  padding-bottom: 4px;
+}
+
+input::-moz-placeholder {
+  text-transform: capitalize;
+}
+
+input::placeholder {
+  text-transform: capitalize;
+}
+
+.btn_send {
+  text-transform: capitalize;
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
 .container {
@@ -643,15 +711,6 @@ video {
   flex-direction: column;
   align-items: flex-start;
   gap: 10px;
-}
-
-.list-item {
-  border-radius: 0.375rem;
-  --tw-bg-opacity: 1;
-  background-color: rgb(59 130 246 / var(--tw-bg-opacity));
-  padding-left: 10px;
-  padding-right: 10px;
-  text-transform: capitalize;
 }
 
 *{
