--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -14,6 +14,62 @@
 
 
 @layer utilities{
+
+  .modal_cont{
+    @apply max-w-full h-screen bg-black bg-opacity-50  justify-center items-center hidden
+  }
+
+
+  .modal{
+    @apply w-[470px] h-auto px-[15px] py-[15px] bg-slate-600 rounded-lg
+  }
+
+
+  .modal_header{
+    @apply w-full flex justify-between mb-[17px]
+  }
+
+  .modal_title{
+    @apply capitalize text-[17px] text-white
+  }
+
+
+  .fa-xmark{
+    @apply cursor-pointer text-white
+  }
+
+  .modal_body{
+    @apply w-full flex items-center gap-[10px]
+  }
+
+  input{
+    @apply w-full px-[10px] py-[4px] rounded-md
+  }
+
+  input::placeholder{
+    @apply capitalize
+  }
+
+  .btn_send{
+    @apply capitalize text-white
+  }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  
   .container{
     @apply max-w-full h-screen flex justify-center items-center bg-black bg-opacity-20
   }
