--- a/assets/styel.css
+++ b/assets/styel.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@200;300;500&display=swap');
+
 /*
 ! tailwindcss v3.3.3 | MIT License | https://tailwindcss.com
 */
@@ -434,7 +436,7 @@ video {
   display: none;
 }
 
-*, ::before, ::after {
+*, ::before, ::after{
   --tw-border-spacing-x: 0;
   --tw-border-spacing-y: 0;
   --tw-translate-x: 0;
@@ -484,7 +486,7 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
-::backdrop {
+::backdrop{
   --tw-border-spacing-x: 0;
   --tw-border-spacing-y: 0;
   --tw-translate-x: 0;
@@ -534,41 +536,47 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
-.container {
+.container{
   width: 100%;
 }
 
-@media (min-width: 640px) {
-  .container {
+@media (min-width:  300px){
+  .container{
+    max-width:  300px;
+  }
+}
+
+@media (min-width: 640px){
+  .container{
     max-width: 640px;
   }
 }
 
-@media (min-width: 768px) {
-  .container {
+@media (min-width: 768px){
+  .container{
     max-width: 768px;
   }
 }
 
-@media (min-width: 1024px) {
-  .container {
+@media (min-width: 1024px){
+  .container{
     max-width: 1024px;
   }
 }
 
-@media (min-width: 1280px) {
-  .container {
+@media (min-width: 1280px){
+  .container{
     max-width: 1280px;
   }
 }
 
-@media (min-width: 1536px) {
-  .container {
+@media (min-width: 1536px){
+  .container{
     max-width: 1536px;
   }
 }
 
-.modal_cont {
+.modal_cont{
   display: none;
   height: 100vh;
   max-width: 100%;
@@ -578,7 +586,7 @@ video {
   --tw-bg-opacity: 0.5;
 }
 
-.modal {
+.modal{
   height: auto;
   width: 470px;
   border-radius: 0.5rem;
@@ -590,34 +598,34 @@ video {
   padding-bottom: 15px;
 }
 
-.modal_header {
+.modal_header{
   margin-bottom: 17px;
   display: flex;
   width: 100%;
   justify-content: space-between;
 }
 
-.modal_title {
+.modal_title{
   font-size: 17px;
   text-transform: capitalize;
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.fa-xmark {
+.fa-xmark{
   cursor: pointer;
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.modal_body {
+.modal_body{
   display: flex;
   width: 100%;
   align-items: center;
   gap: 10px;
 }
 
-input {
+input{
   width: 100%;
   border-radius: 0.375rem;
   padding-left: 10px;
@@ -626,21 +634,21 @@ input {
   padding-bottom: 4px;
 }
 
-input::-moz-placeholder {
+input::-moz-placeholder{
   text-transform: capitalize;
 }
 
-input::placeholder {
+input::placeholder{
   text-transform: capitalize;
 }
 
-.btn_send {
+.btn_send{
   text-transform: capitalize;
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.container {
+.container{
   display: flex;
   height: 100vh;
   max-width: 100%;
@@ -650,7 +658,7 @@ input::placeholder {
   --tw-bg-opacity: 0.2;
 }
 
-.wrapper {
+.wrapper{
   width: 700px;
   max-width: 800px;
   border-radius: 0.5rem;
@@ -662,7 +670,7 @@ input::placeholder {
   padding-bottom: 20px;
 }
 
-.header {
+.header{
   display: flex;
   width: 100%;
   justify-content: space-between;
@@ -672,11 +680,11 @@ input::placeholder {
   padding-bottom: 10px;
 }
 
-.title {
+.title{
   text-transform: capitalize;
 }
 
-.body {
+.body{
   margin-top: 10px;
   display: flex;
   height: 300px;
@@ -685,7 +693,7 @@ input::placeholder {
   background-color: rgb(190 242 100 / var(--tw-bg-opacity));
 }
 
-.box {
+.box{
   width: 300px;
   border-inline-end-width: 1px;
   --tw-bg-opacity: 1;
@@ -693,7 +701,7 @@ input::placeholder {
   padding-left: 10px;
 }
 
-.btn_add {
+.btn_add{
   margin-top: 10px;
   cursor: pointer;
   border-width: 1px;
@@ -704,7 +712,7 @@ input::placeholder {
   padding-right: 10px;
 }
 
-.list {
+.list{
   margin-top: 20px;
   display: flex;
   width: 100%;
